--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
     <link rel="shortcut icon" href="./imagenes/favicon.webp" type="image/x-icon"> <!-- Icono de la pestaña -->
     <link rel="stylesheet" href="Style.css"> <!-- Enlace a la hoja de estilos CSS -->
-    <title>Portfolio Diego</title> <!-- Título de la página que aparece en la pestaña del navegador -->
+    <title>Portfolio Diego</title> 
 </head>
 
 <body>
     <header>
-        <h1 id="title">My Portfolio</h1> <!-- Título principal del portafolio -->
+        <h1 id="title">My Portfolio</h1> 
         <nav>
             <a href="#home">Home</a> <!-- Enlace a la sección de inicio -->
             <a href="#about">About me</a> <!-- Enlace a la sección "Sobre mí" -->
@@ -33,23 +33,24 @@
 
     <main>
         <section id="home">
-            <h2>Diego Ariza</h2> <!-- Nombre del desarrollador -->
-            <p>Industrial engineer</p> <!-- Profesión -->
+            <h2>Diego Ariza</h2> 
+            <p>Industrial engineer</p> 
             <img src="./imagenes/perfil.webp" alt="My photo" id="my_photo"> <!-- Foto del perfil -->
         </section>
 
         <section id="about">
-            <p>I'm a simple guy who loves videogames. I'm 27 years old and have a bachelor's degree in Industrial</p>
-            <p>However, I'm now studying software development with knowledge in Python language, and some</p>
-            <p>ideas in HTML and CSS.</p>
+            <h2>About Me</h2>
+            <p>I'm a simple guy who loves videogames. I'm 27 years old and have a bachelor's degree in Industrial
+                Engineer. However, I'm now studying software development with knowledge in Python language, and some
+                ideas in HTML and CSS.</p>
         </section>
 
         <section id="skills">
             <h2>Skills</h2> <!-- Título de la sección de habilidades -->
             <ul>
-                <li>Python</li> <!-- Habilidad en Python -->
-                <li>HTML</li> <!-- Habilidad en HTML -->
-                <li>CSS</li> <!-- Habilidad en CSS -->
+                <li>Python</li>
+                <li>HTML</li> 
+                <li>CSS</li> 
             </ul>
         </section>
 
@@ -57,39 +58,43 @@
             <h2>Projects</h2> <!-- Título de la sección de proyectos -->
             <table>
                 <tr>
-                    <th>Project Name</th> <!-- Nombre del proyecto -->
-                    <th>Technologies</th> <!-- Tecnologías utilizadas -->
-                    <th>Link</th> <!-- Enlace al proyecto -->
+                    <th>Project Name</th> 
+                    <th>Technologies</th>
+                    <th>Link</th> 
                 </tr>
 
                 <tr>
-                    <th>Inventory System</th> <!-- Nombre del primer proyecto -->
-                    <th>Python</th> <!-- Tecnología utilizada -->
-                    <th><a href="https://github.com/DiegoAG31/Inventory-system-python" target="_blank">Visit</a></th> <!-- Enlace al proyecto -->
+                    <th>Inventory System</th> 
+                    <th>Python</th> 
+                    <th><a href="https://github.com/DiegoAG31/Inventory-system-python" target="_blank" class="link">Visit</a></th>
+                    <!-- Enlace al proyecto -->
                 </tr>
 
                 <tr>
-                    <th>Website</th> <!-- Nombre del segundo proyecto -->
-                    <th>Html y Css</th> <!-- Tecnologías utilizadas -->
-                    <th><a href="https://github.com/DiegoAG31/CSSpractice" target="_blank">Visit</a></th> <!-- Enlace al proyecto -->
+                    <th>Website</th> 
+                    <th>Html y Css</th> 
+                    <th><a href="https://github.com/DiegoAG31/CSSpractice" target="_blank" class="link">Visit</a></th>
+                    <!-- Enlace al proyecto -->
                 </tr>
             </table>
         </section>
 
         <section id="contact">
-            <h3>Contact Me</h3> <!-- Título de la sección de contacto -->
+            <h2>Contact Me</h2> <!-- Título de la sección de contacto -->
             <div class="form">
                 <form action="#" method="post"> <!-- Formulario de contacto -->
                     <label for="name">Name: </label> <!-- Etiqueta para el campo de nombre -->
-                    <input type="text" id="name" name="name" required> <!-- Campo de entrada para el nombre -->
+                    <input type="text" id="name" name="name" required placeholder="E.g.: Diego Ariza"> <!-- Campo de entrada para el nombre -->
                     <br>
-                                  
+
                     <label for="email">Email: </label> <!-- Etiqueta para el campo de correo electrónico -->
-                    <input type="email" id="email" name="email" required> <!-- Campo de entrada para el correo electrónico -->
+                    <input type="email" id="email" name="email" required placeholder="E.g.: Diegoag3107@gmail.com">
+                    <!-- Campo de entrada para el correo electrónico -->
                     <br>
 
                     <label for="message">Message: </label> <!-- Etiqueta para el campo de mensaje -->
-                    <textarea name="message" id="message" rows="4" required></textarea> <!-- Área de texto para el mensaje -->
+                    <textarea name="message" id="message" rows="4" required placeholder="Type here your message..."></textarea>
+                    <!-- Área de texto para el mensaje -->
                     <br>
 
                     <input type="submit" value="Send"> <!-- Botón para enviar el formulario -->
@@ -97,19 +102,22 @@
                 </form>
             </div>
 
-            <div id="socialmedia"><p>Socials Media</p> <!-- Título de la sección de redes sociales -->
+            <div id="socialmedia">
+                <h2>Socials Media</h2> <!-- Título de la sección de redes sociales -->
                 <div class="icon">
-                    <a href="mailto: diegoag3107@gmail.com"><img src="./imagenes/emailicon.webp" alt="Mail icon"></a> <!-- Icono de correo electrónico -->
+                    <a href="mailto: diegoag3107@gmail.com"><img src="./imagenes/emailicon.webp" alt="Mail icon"></a>
+                    <!-- Icono de correo electrónico -->
                 </div>
                 <div class="icon">
-                    <a href="https://github.com/diegoag31" target="_blank"><img src="./imagenes/githubicon.webp" alt="Github icon"></a> <!-- Icono de GitHub -->
+                    <a href="https://github.com/diegoag31" target="_blank"><img src="./imagenes/githubicon.webp"
+                            alt="Github icon"></a> <!-- Icono de GitHub -->
                 </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; DiegoAG31 2025. All rights reserved</p> <!-- Pie de página con derechos de autor -->
+        <p>&copy; DiegoAG31 2025. All rights reserved</p> 
     </footer>
 
 </body>
